--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ Werkzeug==0.9.4
 argparse==1.2.1
 itsdangerous==0.23
 git+https://github.com/uniphil/flask-babel.git
+Flask-Babel==0.9
+Babel==1.3
+pytz==2013d
+speaklater==1.3
+
